# ollama-reviewer

./: .gitignore  LICENSE  README.md
agents/: docker-compose.yaml
agents/git/: Dockerfile  pyproject.toml
agents/git/src/git/: app.py
deploy/: docker-compose.yaml
frontend/: package-lock.json  package.json
frontend/src/: components.d.ts
frontend/src/components/: HelloWorld.vue
frontend/src/components/dataSources/: GitDiff.vue  GitLab.vue
frontend/src/components/dataSources/GitAgent/: Diff.vue  File.vue  Main.vue
nginx/: Dockerfile
